--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.LearnUI1"
         tools:targetApi="31">
         <activity
+            android:name=".Profile"
+            android:exported="false" />
+        <activity
+            android:name=".ResidentsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.home.Category_activity"
             android:exported="false" />
         <activity
